# Sabrina

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt  app.cpp  app.h  core_global.h
libs/gui/: CMakeLists.txt  gui_global.h  mainwindows.cpp  mainwindows.h  mainwindowsfactory.cpp  mainwindowsfactory.h
libs/gui/actions/: editableitemtypespecializedaction.cpp  editableitemtypespecializedaction.h
libs/gui/delegates/: labelsmodelitemdelegate.cpp  labelsmodelitemdelegate.h
libs/gui/dockWidgets/: labelitemsdockwidget.cpp  labelitemsdockwidget.h  labelitemsdockwidget.ui  projectlabelsdockwidget.cpp  projectlabelsdockwidget.h  projectlabelsdockwidget.ui  projectnotesdockwidget.cpp  projectnotesdockwidget.h  projectnotesdockwidget.ui  projecttreedockwidget.cpp  projecttreedockwidget.h  projecttreedockwidget.ui
libs/gui/editors/: cartographyeditor.cpp  cartographyeditor.h  cartographyeditor.ui  comicscripteditor.cpp  comicscripteditor.h  comicscripteditor.ui  personnageeditor.cpp  personnageeditor.h  personnageeditor.ui  placeeditor.cpp  placeeditor.h  placeeditor.ui
libs/gui/ressources/: ressources_gui.qrc
libs/gui/ressources/qml/: mapEditorPoint.qml  mapEditorWidget.qml  noteseditorwidget.qml
libs/gui/utilsDialogs/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  licensedialog.cpp  licensedialog.h  licensedialog.ui
libs/gui/widgets/: comicscripteditwidget.cpp  comicscripteditwidget.h  noteseditwidget.cpp  noteseditwidget.h  noteseditwidget.ui  texteditwidget.cpp  texteditwidget.h
libs/model/: CMakeLists.txt  editableitem.cpp  editableitem.h  editableitemfactory.cpp  editableitemfactory.h  editableitemmanager.cpp  editableitemmanager.h  model_global.h
libs/model/editableItems/: cartography.cpp  cartography.h  comicscript.cpp  comicscript.h  folder.cpp  folder.h  personnage.cpp  personnage.h  place.cpp  place.h
libs/model/editableItemsManagers/: jsoneditableitemmanager.cpp  jsoneditableitemmanager.h
libs/model/labels/: label.cpp  label.h  labelselectionforitemproxymodel.cpp  labelselectionforitemproxymodel.h  labelstree.cpp  labelstree.h  projectfilterbylabelproxymodel.cpp  projectfilterbylabelproxymodel.h
libs/model/notes/: noteslist.cpp  noteslist.h
libs/model/ressources/: ressources.qrc
libs/text/: CMakeLists.txt  abstracttextstyle.cpp  abstracttextstyle.h  comicscript.cpp  comicscript.h  exportfunctions.cpp  exportfunctions.h  text_global.h  textnode.cpp  textnode.h  textstylemanager.cpp  textstylemanager.h
libs/utils/: CMakeLists.txt  app_info.cpp.in  app_info.h  envvars.cpp  envvars.h  settings_global_keys.h  stringutils.cpp  stringutils.h  utils_global.h
modules/: CMakeLists.txt
prog/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  testcharactereditableitem.cpp  testtextnode.cpp  textEditorComicScriptMockup.cpp
